--- a/internal/templates/go_mongodb_database.tmpl
+++ b/internal/templates/go_mongodb_database.tmpl
@@ -2,16 +2,66 @@ package database
 
 import (
 	"context"
-	"os"
 	"time"
 
+{{if .HasIndexes}}
+	"go.mongodb.org/mongo-driver/bson"
+	"go.mongodb.org/mongo-driver/bson/primitive"
+{{end}}
 	"go.mongodb.org/mongo-driver/mongo"
 	"go.mongodb.org/mongo-driver/mongo/options"
 )
 
-func Connect() (context.Context, *mongo.Client) {
+type Database interface {
+	Connect() *mongo.Client
+	Disconnect()
+}
+
+type database struct {
+	Name   string
+	URL    string
+	Ctx    context.Context
+	Client *mongo.Client
+}
+
+{{if .HasIndexes}}
+func getRef(val bool) *bool {
+	return &val
+}
+{{end}}
+
+func (d *database) createIndexes() error {
+	// Define here the indexes of your database
+{{if .HasIndexes}}
+	_, err := d.Client.Database(d.Name).Collection("users").Indexes().CreateMany(
+		d.Ctx,
+{{range .App.Entities}}
+{{range .Indexes}}
+		[]mongo.IndexModel{
+			{
+				Keys: bson.D{
+{{range .Fields}}
+					primitive.E{Key: "{{.Name}}", Value: {{mapSort .Sort}}},
+{{end}}
+				},
+				Options: &options.IndexOptions{
+					Unique: getRef({{.Unique}}),
+				},
+			},
+		},
+{{end}}
+{{end}}
+	)
+
+	return err
+{{else}}
+	return nil
+{{end}}
+}
+
+func (d *database) Connect() *mongo.Client {
 	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
-	client, err := mongo.Connect(ctx, options.Client().ApplyURI(os.Getenv("DB_URL")))
+	client, err := mongo.Connect(ctx, options.Client().ApplyURI(d.URL))
 
 	defer cancel()
 
@@ -19,11 +69,27 @@ func Connect() (context.Context, *mongo.Client) {
 		panic(err)
 	}
 
-	return ctx, client
+	d.Ctx = ctx
+	d.Client = client
+
+	err = d.createIndexes()
+
+	if err != nil {
+		panic(err)
+	}
+
+	return client
 }
 
-func Disconnect(ctx context.Context, client *mongo.Client) {
-	if err := client.Disconnect(ctx); err != nil {
+func (d *database) Disconnect() {
+	if err := d.Client.Disconnect(d.Ctx); err != nil {
 		panic(err)
+	}
+}
+
+func New(url string, name string) Database {
+	return &database{
+		URL:  url,
+		Name: name,
 	}
 }
