--- a/internal/templates/go_mongodb_repository.tmpl
+++ b/internal/templates/go_mongodb_repository.tmpl
@@ -9,7 +9,9 @@ import (
 {{if or (.Entity.HasAction "create") (.Entity.HasAction "update") }}
 	"github.com/gofiber/fiber/v2"
 {{end}}
+{{if or (.Entity.HasAction "delete") (.Entity.HasAction "update")}}
 	"go.mongodb.org/mongo-driver/bson"
+{{end}}
 	"go.mongodb.org/mongo-driver/mongo"
 
 {{range .Entity.Actions}}{{if eq .Type "getAll"}}
@@ -34,7 +36,9 @@ type Repository interface {
 	Delete(*entities.{{capitalize $.Entity.Name}}) (bool, error)
 {{end}}
 {{end}}
+{{if or ($.Entity.HasAction "getOne") ($.Entity.HasAction "update")}}
 	GetOne(*GetOneParams) (*entities.{{capitalize $.Entity.Name}}, error)
+{{end}}
 }
 
 type repository struct {
@@ -147,6 +151,8 @@ func (s *repository) Delete({{$.Entity.Name}} *entities.{{capitalize $.Entity.Na
 }
 {{end}}
 {{end}}
+
+{{if or ($.Entity.HasAction "getOne") ($.Entity.HasAction "update")}}
 // GetOne - Get one {{$.Entity.Name}} by parameters
 func (s *repository) GetOne(params *GetOneParams) (*entities.{{capitalize $.Entity.Name}}, error) {
 	var result []*entities.{{capitalize $.Entity.Name}}
@@ -172,6 +178,7 @@ func (s *repository) GetOne(params *GetOneParams) (*entities.{{capitalize $.Enti
 
 	return result[0], nil
 }
+{{end}}
 
 func NewRepository(c *mongo.Client) Repository {
 	return &repository{
