--- a/internal/templates/go_mongodb_env_test.tmpl
+++ b/internal/templates/go_mongodb_env_test.tmpl
@@ -1,5 +1,5 @@
-DB_URL="mongodb://database:27017"
+DB_URL="mongodb://localhost:27017"
 DB_NAME="{{.App.Name}}_test"
 PORT=3000
-HOST="0.0.0.0"
+HOST="localhost"
 TOKEN_SECRET="aJix6!UqQv&!&eNOYrf"
