--- a/internal/templates/go_auth_controller.tmpl
+++ b/internal/templates/go_auth_controller.tmpl
@@ -2,12 +2,9 @@ package auth
 
 import (
 	"fmt"
-	"os"
-
 	"{{.App.Repository}}/internal/{{.App.Authentication.Entity}}"
 	"{{.App.Repository}}/internal/validator"
 	"github.com/gofiber/fiber/v2"
-	"github.com/golang-jwt/jwt"
 )
 
 type SignInParams struct {
@@ -23,6 +20,7 @@ type Controller interface {
 
 type controller struct {
 	{{.App.Authentication.Entity}}Service {{.App.Authentication.Entity}}.Service
+	authService Service
 }
 
 func (c *controller) SignIn(ctx *fiber.Ctx) error {
@@ -51,29 +49,31 @@ func (c *controller) SignIn(ctx *fiber.Ctx) error {
 		return fiber.ErrUnauthorized
 	}
 
-	if {{.App.Authentication.Entity}}.CheckPassword(params.Password, result.Password) {
-		token := jwt.NewWithClaims(jwt.SigningMethodHS256, jwt.MapClaims{
-			"email":  result.Email,
-			"userId": result.ID,
-		})
+	validPassword := {{.App.Authentication.Entity}}.CheckPassword(params.Password, result.Password)
 
-		secret := []byte(os.Getenv("TOKEN_SECRET"))
-		tokenString, err := token.SignedString(secret)
-
-		if err != nil {
-			return fmt.Errorf("error generating jwt token")
-		}
-
-		return ctx.JSON(map[string]string{
-			"authToken": tokenString,
-		})
+	if !validPassword {
+		return fiber.ErrUnauthorized
 	}
 
-	return fiber.ErrUnauthorized
+	token, err := c.authService.SignIn(result)
+
+	if err != nil {
+		return err
+	}
+
+	return ctx.JSON(map[string]string{
+		"authToken": token,
+	})
 }
 
 func (c *controller) SignOut(ctx *fiber.Ctx) error {
-	return fiber.ErrNotImplemented
+	err := c.authService.SignOut(ctx.Locals("token").(string))
+
+	if err != nil {
+		return fmt.Errorf("signing out %s", err.Error())
+	}
+
+	return ctx.SendStatus(fiber.StatusOK)
 }
 
 func (c *controller) Me(ctx *fiber.Ctx) error {
@@ -94,6 +94,6 @@ func (c *controller) Me(ctx *fiber.Ctx) error {
 	return ctx.JSON({{.App.Authentication.Entity}})
 }
 
-func NewController({{.App.Authentication.Entity}}Service {{.App.Authentication.Entity}}.Service) Controller {
-	return &controller{userService: {{.App.Authentication.Entity}}Service}
+func NewController({{.App.Authentication.Entity}}Service {{.App.Authentication.Entity}}.Service, authService Service) Controller {
+	return &controller{userService: {{.App.Authentication.Entity}}Service, authService: authService}
 }
