--- a/internal/templates/go_mongodb_env.tmpl
+++ b/internal/templates/go_mongodb_env.tmpl
@@ -3,3 +3,6 @@ DB_NAME="{{.App.Name}}"
 PORT=3000
 HOST="0.0.0.0"
 TOKEN_SECRET="aJix6!UqQv&!&eNOYrf"
+TOKEN_DURATION="600"
+REDIS_URL="localhost:6380"
+REDIS_PASSWORD="localpass"
