--- a/internal/templates/go_mongodb_env_test.tmpl
+++ b/internal/templates/go_mongodb_env_test.tmpl
@@ -3,3 +3,6 @@ DB_NAME="{{.App.Name}}_test"
 PORT=3000
 HOST="localhost"
 TOKEN_SECRET="aJix6!UqQv&!&eNOYrf"
+TOKEN_DURATION="600"
+REDIS_URL="localhost:6380"
+REDIS_PASSWORD="localpass"
