--- a/internal/templates/go_mongodb_entity.tmpl
+++ b/internal/templates/go_mongodb_entity.tmpl
@@ -6,11 +6,17 @@ type {{capitalize .Entity.Name}} struct {
 {{range .Entity.Fields}}
 	{{capitalize .Name}} {{.Type}} `json:"{{.Name}}" bson:"{{.Name}}" validate:"{{buildValidations .}}"`
 {{end}}
-{{range $.Entity.GetNestedEntities}}
+{{range .Entity.HasMany}}
+{{if .IsNestedIn $.Entity}}
 	{{pluralize (capitalize .Name)}} []*{{capitalize .Name}} `json:"{{pluralize .Name}}" bson:"{{pluralize .Name}}" validate:"dive"`
 {{end}}
-{{if $.Entity.BelongsToAuthenticatedEntity}}
-	UserID     string `json:"-" bson:"userId"`
+{{end}}
+{{range .Entity.BelongsTo}}
+{{if .IsUsedForAuthentication}}
+	{{capitalize .Name}}ID string `json:"-" bson:"{{.Name}}Id"`
+{{else}}
+	{{capitalize .Name}}ID string `json:"{{.Name}}Id" bson:"{{.Name}}Id"`
+{{end}}
 {{end}}
 {{if .Entity.Timestamps}}
 	Timestamps `json:",inline" bson:",inline"`
@@ -19,8 +25,10 @@ type {{capitalize .Entity.Name}} struct {
 
 func New{{capitalize .Entity.Name}}() {{capitalize .Entity.Name}} {
 	return {{capitalize .Entity.Name}}{
-{{range $.Entity.GetNestedEntities}}
-		{{pluralize (capitalize .Name)}}: make([]*{{capitalize .Name}}, 0), // Default value of empty array
+{{range .Entity.HasMany}}
+{{if .IsNestedIn $.Entity}}
+	{{pluralize (capitalize .Name)}}: make([]*{{capitalize .Name}}, 0), // Default value of empty array
+{{end}}
 {{end}}
 	}
 }
