Improved entity tests and default package

--- a/internal/templates/go/app.tmpl
+++ b/internal/templates/go/app.tmpl
@@ -3,9 +3,9 @@ package app
 import (
 	"os"
 
-	"{{.App.Repository}}/internal/database"
-	"{{.App.Repository}}/internal/errors"
-	"{{.App.Repository}}/internal/router"
+	"{{.App.Repository}}/pkg/database"
+	"{{.App.Repository}}/pkg/errors"
+	"{{.App.Repository}}/pkg/router"
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/logger"
 	"github.com/gofiber/fiber/v2/middleware/recover"
