--- a/internal/templates/go/auth_controller.tmpl
+++ b/internal/templates/go/auth_controller.tmpl
@@ -2,8 +2,8 @@ package auth
 
 import (
 	"fmt"
-	"{{.App.Repository}}/internal/{{.App.Authentication.Entity}}"
-	"{{.App.Repository}}/internal/validator"
+	"{{.App.Repository}}/pkg/{{.App.Authentication.Entity}}"
+	"{{.App.Repository}}/pkg/validator"
 	"github.com/gofiber/fiber/v2"
 )
 
