--- a/internal/templates/go/controller.tmpl
+++ b/internal/templates/go/controller.tmpl
@@ -1,8 +1,8 @@
 package {{$.Entity.Name}}
 
 import (
-	"{{.Definitions.App.Repository}}/internal/entities"
-	"{{.Definitions.App.Repository}}/internal/validator"
+	"{{.Definitions.App.Repository}}/pkg/entities"
+	"{{.Definitions.App.Repository}}/pkg/validator"
 	"github.com/gofiber/fiber/v2"
 )
 
