--- a/internal/templates/go/auth_service.tmpl
+++ b/internal/templates/go/auth_service.tmpl
@@ -7,7 +7,7 @@ import (
 	"strconv"
 	"time"
 
-	"{{.App.Repository}}/internal/entities"
+	"{{.App.Repository}}/pkg/entities"
 	"github.com/go-redis/redis/v8"
 	"github.com/golang-jwt/jwt"
 )
