--- a/internal/templates/go/auth_test.tmpl
+++ b/internal/templates/go/auth_test.tmpl
@@ -17,7 +17,10 @@ func TestMain(m *testing.M) {
 		panic(err)
 	}
 
-	os.Exit(m.Run())
+	teardown := utils.SetupData("auth_test")
+	code := m.Run()
+	teardown()
+	os.Exit(code)
 }
 
 func TestAuthSignInRoute(t *testing.T) {
