--- a/internal/templates/go/controller_test.tmpl
+++ b/internal/templates/go/controller_test.tmpl
@@ -18,7 +18,10 @@ func TestMain(m *testing.M) {
 		panic(err)
 	}
 
-	os.Exit(m.Run())
+	teardown := utils.SetupData("{{.Entity.Name}}_test")
+	code := m.Run()
+	teardown()
+	os.Exit(code)
 }
 
 {{range .Entity.Actions}}
