--- a/internal/templates/go/error_handler.tmpl
+++ b/internal/templates/go/error_handler.tmpl
@@ -3,7 +3,7 @@ package errors
 import (
 	"log"
 
-	"{{.App.Repository}}/internal/validator"
+	"{{.App.Repository}}/pkg/validator"
 	"github.com/gofiber/fiber/v2"
 )
 
