--- a/internal/templates/go/main_test.tmpl
+++ b/internal/templates/go/main_test.tmpl
@@ -15,7 +15,10 @@ func TestMain(m *testing.M) {
 		panic(err)
 	}
 
-	os.Exit(m.Run())
+	teardown := utils.SetupData("main_test")
+	code := m.Run()
+	teardown()
+	os.Exit(code)
 }
 
 func TestHealthRoute(t *testing.T) {
