--- a/internal/templates/go/service.tmpl
+++ b/internal/templates/go/service.tmpl
@@ -31,7 +31,7 @@ type GetAllParams struct {
 {{end}}
 {{end}}
 {{range $.Entity.Fields}}
-	{{capitalize .Name}} {{.Type}} `query:"{{.Name}}" bson:"{{.Name}},omitempty" {{buildValidations .}}`
+	{{capitalize .Name}} {{.Type}} `query:"{{.Name}}" bson:"{{.Name}},omitempty" {{buildValidations . false}}`
 {{end}}
 }
 {{end}}
@@ -44,7 +44,7 @@ type GetOneParams struct {
 {{end}}
 	ID string `bson:"id,omitempty"`
 {{range $.Entity.Fields}}
-	{{capitalize .Name}} {{.Type}} `query:"{{.Name}}" bson:"{{.Name}},omitempty" validate:"{{buildValidations .}}"`
+	{{capitalize .Name}} {{.Type}} `query:"{{.Name}}" bson:"{{.Name}},omitempty" {{buildValidations . false}}`
 {{end}}
 }
 {{end}}
