Improved tests for nested entities

--- a/internal/templates/go/json_marshal.tmpl
+++ b/internal/templates/go/json_marshal.tmpl
@@ -2,4 +2,15 @@ json.Marshal(map[string]interface{}{
 {{range .Fields}}
     "{{.Name}}": {{jsonMarshalField .}},
 {{end}}
+{{range .HasMany}}
+{{if .IsNestedIn $}}
+    "{{pluralize .Name}}": []map[string]interface{}{
+        {
+{{range .Fields}}
+        "{{.Name}}": {{jsonMarshalField .}},
+{{end}}
+        },
+    },
+{{end}}
+{{end}}
 })
